Fix `invisible` CSS class

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -61,8 +61,7 @@
 }
 
 .invisible {
-  font-size: 0;
-  line-height: 0;
+  display: none;
 }
 
 .ellipsis {
